5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3992/executions/1662_2975.log
== TEST (2019-04-15 15:23:03) 
-- CODE:
var1 = float(input("quantidade do suco: "))
var2 = float(input("quantidade de salgado:"))
var3 = float(input("valor disponível: "))

if(var1 + var2 <= var3)
  mensagem = "sim"
else: 
  mensagem = "nao"
print(mensagem)
-- ERROR:
File "XXXX", line 5
    if(var1 + var2 <= var3)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:23:13) 
-- CODE:
var1 = float(input("quantidade do suco: "))
var2 = float(input("quantidade de salgado:"))
var3 = float(input("valor disponível: "))

if(var1 + var2 <= var3):
  mensagem = "sim"
else: 
  mensagem = "nao"
print(mensagem)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:10) 
-- CODE:
var1 = float(input("quantidade do suco: "))
var2 = float(input("quantidade de salgado:"))
var3 = float(input("valor disponível: "))
var4 = var1*3
var5 = var2*3.
if(var + var <= var3):
  mensagem = "sim"
else: 
  mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if(var + var <= var3):
NameError: name 'var' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:24:41) 
-- CODE:
var1 = float(input("quantidade do suco: "))
var2 = float(input("quantidade de salgado:"))
var3 = float(input("valor disponível: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var3):
  mensagem = "sim"
else: 
  mensagem = "nao"
print(mensagem)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:15) 
-- CODE:
var1 = float(input("quantidade do suco: "))
var2 = float(input("quantidade de salgado:"))
var3 = float(input("valor disponível: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var3): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:25:53) 
-- CODE:
var1 = float(input("quantidade do suco: "))
var2 = float(input("quantidade de salgado:"))
var3 = float(input("valor disponível: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var3): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:10) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = int(input("valor disponível: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var3): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:24) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var = int(input("valor disponível: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:26:59) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponível: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:11) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:31) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var3): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:27:43) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var3): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- EXECUTION TIME:
0.214552
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:27:49) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.
if(var4 + var5 <= var3): mensagem = "sim"
else: mensagem = "nao"
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:17) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.
var6 = var1 + var2
if(var4 + var5 <= var3): 
	mensagem = "sim"
else: 
	mensagem = "nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:43) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "sim"
else: 
	mensagem = "nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:29:55) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "sim"
else: 
	mensagem = "nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:30:05) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "sim"
else: 
	mensagem = "nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.155872
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:30:23) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "sim"
else: 
	mensagem = "nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.133937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:24) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "sim"
else: 
	mensagem = "nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:30:45) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "sim"
else: 
	mensagem = "nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:31:32) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.158397
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:31:34) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.207946
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:34) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:31:46) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.146191
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:31:47) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.264511
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:47) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:31:53) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))

var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:32:52) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.171933
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 3, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:32:53) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:00) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:33:30) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.179242
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 3, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:43) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:33:54) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:34:04) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = int(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.138695
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1662/2975/main.py", line 3, in <module>
    var3 = int(input())
ValueError: invalid literal for int() with base 10: '15.0'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 15:36:11) 
-- CODE:
var1 = int(input("quantidade do suco: "))
var2 = int(input("quantidade de salgado:"))
var3 = float(input("valor disponivel: "))
var4 = var1*3
var5 = var2*3.5
var6 = var4 + var5
if(var4 + var5 <= var3): 
	mensagem = "Sim"
else: 
	mensagem = "Nao"
print(round(var6,2))
print(mensagem)
-- EXECUTION TIME:
0.154836
-- TEST CASE 1:
---- input:
2
2
15.0
---- correct output:
13.0
Sim
---- user output:
13.0
Sim
-- TEST CASE 2:
---- input:
1
2
8.0
---- correct output:
10.0
Nao
---- user output:
10.0
Nao
-- TEST CASE 3:
---- input:
3
5
25.50
---- correct output:
26.5
Nao
---- user output:
26.5
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
